force-app/main/default/objects/ByPassFlowConfiguration__mdt/ByPassFlowConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>By Pass Flow Configuration</label>
    <pluralLabel>By Pass Flow Configurations</pluralLabel>
</CustomObject>