force-app/main/default/objects/ByPassFlowConfiguration__mdt/fields/ByPassedProfiles__c.field-meta.xml
<CustomField>
    <fullName>ByPassedProfiles__c</fullName>
    <label>By-Passed Profiles</label>
    <type>TextArea</type>
</CustomField>