force-app/main/default/objects/ByPassFlowConfiguration__mdt/fields/ByPassedUsers__c.field-meta.xml
<CustomField>
    <fullName>ByPassedUsers__c</fullName>
    <label>By-Passed Users</label>
    <type>TextArea</type>
</CustomField>