force-app/main/default/objects/ByPassFlowConfiguration__mdt/fields/ByPassFlow__c.field-meta.xml
<CustomField>
    <fullName>ByPassFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you want certain flow to by pass</description>
    <label>By Pass Flow</label>
    <type>Checkbox</type>
</CustomField>