force-app/main/default/objects/ByPassFlowConfiguration__mdt/listViews/FlowConfigs.listView-meta.xml
<ListView>
    <fullName>FlowConfigs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ByPassFlow__c</columns>
    <columns>ByPassedUsers__c</columns>
    <columns>ByPassedProfiles__c</columns>
    <columns>ObjectAPIName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Flow Configs</label>
</ListView>